--- a/RossmanSalesVisualizations.ipynb
+++ b/RossmanSalesVisualizations.ipynb
@@ -1144,7 +1144,8 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
